[package]
name = "vulkan-testing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
ash = { version = "0.38.0", features = ["linked"] }
ash-window = "0.13.0"
log = "0.4.21"
pretty_env_logger = "0.5.0"
winit = { version = "0.29.15", features = ["rwh_06"] }
